# wgame

./: Cargo.toml  LICENSE  README.md
app/: Cargo.toml
app/examples/: events.rs  multiple_windows.rs  render_loop.rs  sleep.rs  spawn.rs
app/src/: app.rs  executor.rs  lib.rs  proxy.rs  runtime.rs  window.rs
assets/web/: index.html
examples/: custom_future.rs  events.rs  join.rs  multiple_windows.rs  raw_wgpu.rs  render_loop.rs  sleep.rs  spawn.rs  triangle.rs
examples/raw_wgpu/: main.rs
macros/src/: lib.rs
src/: app.rs  executor.rs  lib.rs  main.rs  runtime.rs  surface.rs  window.rs
wgame/: Cargo.toml  README.md
wgame-app/: Cargo.toml  README.md
wgame-app-input/: Cargo.toml  README.md
wgame-app-input/src/: lib.rs
wgame-app/examples/: custom_future.rs  events.rs  join.rs  multiple_windows.rs  render_loop.rs  sleep.rs  spawn.rs  window_main.rs
wgame-app/src/: app.rs  executor.rs  lib.rs  output.rs  proxy.rs  runtime.rs  time.rs  timer.rs  window.rs  windowed_task.rs
wgame-common/: Cargo.toml
wgame-common/src/: lib.rs
wgame-examples/: .gitignore  Cargo.toml  README.md  index.html
wgame-examples/assets/web/: index.html
wgame-examples/src/: lib.rs  main.rs
wgame-font/: Cargo.toml
wgame-font/examples/: atlas.rs  glyph.rs  multiple.rs  multiple_atlases.rs  random.rs
wgame-font/src/: lib.rs  library.rs  render.rs  text.rs  texture.rs
wgame-font/src/atlas/: inner.rs  mod.rs
wgame-font/src/raster/: mapping.rs
wgame-font/src/render/: library.rs  mod.rs  texture.rs
wgame-font/src/style/: atlas.rs  mod.rs
wgame-fs/: Cargo.toml  README.md
wgame-fs/src/: lib.rs
wgame-gfx/: Cargo.toml  README.md
wgame-gfx-font/: Cargo.toml
wgame-gfx-font/src/: lib.rs  library.rs  render.rs  text.rs  texture.rs
wgame-gfx-shapes/: Cargo.toml  README.md
wgame-gfx-shapes/shaders/: instance.wgsl
wgame-gfx-shapes/src/: attributes.rs  binding.rs  circle.rs  geometry.rs  instance.rs  lib.rs  pipeline.rs  polygon.rs  primitive.rs  render.rs  renderer.rs  shader.rs  shape.rs  textured.rs
wgame-gfx-texture/: Cargo.toml  README.md
wgame-gfx-texture/src/: lib.rs  state.rs  texture.rs
wgame-gfx-typography/: Cargo.toml  README.md
wgame-gfx-typography/shaders/: text.wgsl
wgame-gfx-typography/src/: lib.rs  library.rs  render.rs  text.rs  texture.rs
wgame-gfx/shaders/: common.wgsl  fragment.wgsl  fragment_masked.wgsl  vertex.wgsl
wgame-gfx/src/: auto.rs  bytes.rs  camera.rs  collector.rs  context.rs  frame.rs  instance.rs  lib.rs  modifiers.rs  object.rs  order.rs  queue.rs  registry.rs  renderer.rs  resource.rs  scene.rs  shader.rs  state.rs  surface.rs  target.rs  texture.rs  transform.rs  types.rs  utils.rs
wgame-gfx/src/geometry/: mod.rs
wgame-gfx/src/graphics/: mod.rs  shader.wgsl  triangle.rs
wgame-gfx/src/modifiers/: color.rs  mod.rs  order.rs  transform.rs
wgame-gfx/src/object/: mod.rs  transform.rs
wgame-gfx/src/types/: color.rs  mod.rs  position.rs  transform.rs
wgame-image/: Cargo.toml  README.md
wgame-image/src/: atlas.rs  endec.rs  image.rs  lib.rs  slice.rs  tests.rs  traits.rs
wgame-img/: Cargo.toml
wgame-img/src/: image.rs  lib.rs  pixel.rs  tests.rs  traits.rs
wgame-macros/: Cargo.toml  README.md
wgame-macros/src/: attributes.rs  lib.rs  main_.rs  store_bytes.rs
wgame-shader/: Cargo.toml  README.md
wgame-shader-macros/: Cargo.toml  README.md
wgame-shader-macros/src/: attribute.rs  lib.rs
wgame-shader/src/: attribute.rs  binding.rs  lib.rs  shader.rs
wgame-shapes/: Cargo.toml
wgame-shapes/shaders/: fragment_masked.wgsl  instance.wgsl
wgame-shapes/src/: attributes.rs  binding.rs  circle.rs  geometry.rs  group.rs  instance.rs  lib.rs  pipeline.rs  polygon.rs  primitive.rs  renderer.rs  shader.rs  shape.rs  texture.rs  textured.rs
wgame-text/: Cargo.toml
wgame-text/examples/: atlas.rs  glyph.rs  text.rs
wgame-text/shaders/: text.wgsl
wgame-text/src/: atlas.rs  lib.rs  renderer.rs  text.rs
wgame-text/src/atlas/: mapping.rs  mod.rs  texture.rs
wgame-text/src/raster/: mapping.rs  mod.rs
wgame-text/src/render/: mod.rs  texture.rs
wgame-texture/: Cargo.toml
wgame-texture/src/: atlas.rs  atlas_texture.rs  lib.rs  state.rs  texel.rs  texture.rs  types.rs
wgame-typography/: Cargo.toml  README.md
wgame-typography/examples/: atlas.rs  multiple.rs  random.rs
wgame-typography/src/: lib.rs  metrics.rs
wgame-typography/src/atlas/: mod.rs
wgame-utils/: Cargo.toml  README.md
wgame-utils/src/: lib.rs
wgame/examples/: circle.rs  primitives.rs  quad.rs  triangle.rs
wgame/examples/raw_wgpu/: main.rs
wgame/src/: config.rs  lib.rs  library.rs  window.rs
