[workspace]
members = [
    "wgame",
    "wgame-app",
    "wgame-app-input",
    "wgame-gfx",
    "wgame-gfx-texture",
    "wgame-gfx-shapes",
    "wgame-gfx-typography",
    "wgame-fs",
    "wgame-typography",
    "wgame-image",
    "wgame-shader",
    "wgame-shader-macros",
    "wgame-utils",
    "wgame-macros",
    "wgame-examples",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
wgame = { version = "0.1.0", path = "wgame", default-features = false }
wgame-app = { version = "0.1.0", path = "wgame-app" }
wgame-app-input = { version = "0.1.0", path = "wgame-app-input" }
wgame-gfx = { version = "0.1.0", path = "wgame-gfx" }
wgame-gfx-texture = { version = "0.1.0", path = "wgame-gfx-texture" }
wgame-gfx-shapes = { version = "0.1.0", path = "wgame-gfx-shapes" }
wgame-gfx-typography = { version = "0.1.0", path = "wgame-gfx-typography" }
wgame-fs = { version = "0.1.0", path = "wgame-fs" }
wgame-image = { version = "0.1.0", path = "wgame-image" }
wgame-typography = { version = "0.1.0", path = "wgame-typography" }
wgame-shader = { version = "0.1.0", path = "wgame-shader" }
wgame-shader-macros = { version = "0.1.0", path = "wgame-shader-macros" }
wgame-utils = { version = "0.1.0", path = "wgame-utils" }
wgame-macros = { version = "0.1.0", path = "wgame-macros" }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
winit = { version = "0.30.12", default-features = false, features = ["rwh_06"] }
wgpu = { version = "27.0.1", default-features = false, features = ["wgsl"] }
bytemuck = "1.24.0"
glam = { version = "0.30.9", features = ["bytemuck"] }
rgb = { version = "0.8.52", default-features = false, features = ["bytemuck"] }
half = { version = "2.7.1", default-features = false, features = ["bytemuck"] }
euclid = { version = "0.22.11", default-features = false }
image = { version = "0.25.8", default-features = false }
hashbrown = { version = "0.16.0", features = ["core", "alloc"] }
smallvec = "1.15.1"
derivative = { version = "2.2.0", features = ["use_core"] }
thiserror = { version = "2.0.17", default-features = false }
anyhow = "1.0.100"
log = "0.4.28"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"
web-time = "1.1.0"
js-sys = "0.3.82"
proc-macro2 = "1.0.103"
syn = { version = "2.0.110", features = ["full"] }
quote = "1.0.42"
