[package]
name = "wgame-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
winit.workspace = true
fxhash = "0.2.1"
log.workspace = true
thiserror = "2.0.12"
pin-project = "1.1.10"

[dev-dependencies]
futures = { workspace = true, default-features = true }
winit = { workspace = true, default-features = true }
env_logger.workspace = true
