[package]
name = "wgame-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
x11 = ["winit/x11"]
wayland = ["winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]
android = ["winit/android-native-activity"]
web = [
    "dep:web-time",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:console_error_panic_hook",
]

[dependencies]
futures.workspace = true
winit.workspace = true
hashbrown.workspace = true
log.workspace = true
web-time = { workspace = true, optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
web-sys = { version = "0.3.77", optional = true, features = [
    "Document",
    "Element",
    "Window",
    "console",
    "HtmlCanvasElement",
    "HtmlCollection",
] }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
futures = { workspace = true, default-features = true }
winit = { workspace = true, default-features = true }
env_logger.workspace = true
