[package]
name = "wgame-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
x11 = ["std", "winit/x11"]
wayland = [
    "std",
    "winit/wayland",
    "winit/wayland-dlopen",
    "winit/wayland-csd-adwaita",
]
android = ["std", "winit/android-native-activity"]
std = ["dep:env_logger", "thiserror/std"]
web = [
    "dep:web-time",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:console_log",
    "dep:console_error_panic_hook",
]

[dependencies]
futures.workspace = true
winit.workspace = true
hashbrown.workspace = true
log.workspace = true
web-time = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [
    "Document",
    "Element",
    "Window",
    "console",
    "HtmlCanvasElement",
    "HtmlCollection",
] }
env_logger = { version = "0.11.8", optional = true }
console_log = { version = "1.0.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
thiserror = { version = "2.0.15", default-features = false }

[dev-dependencies]
futures = { workspace = true, default-features = true }
winit = { workspace = true, default-features = true }
