[package]
name = "wgame-examples"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["wgame/desktop", "dump"]
web = ["wgame/web"]
dump = []

[dependencies]
wgame = { workspace = true, features = [
    "shapes",
    "fs",
    "image",
    "font",
    "utils",
] }
wgame-utils.workspace = true
futures.workspace = true
glam.workspace = true
rgb.workspace = true
image = { workspace = true, features = ["png"] }
log.workspace = true
