[package]
name = "wgame-examples"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["wgame/desktop", "dump"]
web = ["wgame/web"]
dump = []

[dependencies]
wgame = { workspace = true, features = [
    "shapes",
    "fs",
    "image",
    "typography",
    "utils",
] }
glam.workspace = true
rgb.workspace = true
log.workspace = true
