[package]
name = "wgame-font"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgame-gfx.workspace = true
wgpu.workspace = true
glam.workspace = true
rgb.workspace = true
hashbrown.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
swash = { version = "0.2.5", default-features = false, features = [
    "libm",
    "render",
    "scale",
] }
etagere = "0.2.15"
image.workspace = true

[dev-dependencies]
image = { workspace = true, features = ["png"] }
