[package]
name = "wgame-font"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgame-gfx.workspace = true
wgame-image.workspace = true
wgame-texture.workspace = true
wgpu.workspace = true
glam.workspace = true
rgb.workspace = true
euclid.workspace = true
hashbrown.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
swash = { version = "0.2.6", default-features = false, features = [
    "libm",
    "render",
    "scale",
] }
etagere = "0.2.15"

[dev-dependencies]
image = { workspace = true, features = ["png"] }
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
