[package]
name = "wgame-fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
std = ["dep:async-fs"]
web = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
]

[dependencies]
anyhow.workspace = true
async-fs = { version = "2.1.2", optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }
js-sys = { workspace = true, optional = true }
log.workspace = true
