[package]
name = "wgame-gfx-font"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgame-font.workspace = true
wgame-gfx.workspace = true
wgame-gfx-texture.workspace = true
wgpu.workspace = true
glam.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
