[package]
name = "wgame-gfx-shapes"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgame-gfx.workspace = true
wgame-image.workspace = true
wgame-gfx-texture.workspace = true
wgame-shader.workspace = true
wgpu.workspace = true
anyhow.workspace = true
log.workspace = true
bytemuck.workspace = true
glam.workspace = true
rgb.workspace = true
half.workspace = true
smallvec.workspace = true
derivative.workspace = true
serde.workspace = true
