[package]
name = "wgame-gfx-texture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgame-gfx.workspace = true
wgame-image.workspace = true
wgame-shader.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
euclid.workspace = true
glam.workspace = true
rgb.workspace = true
half.workspace = true
