[package]
name = "wgame-gfx-typography"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgame-typography.workspace = true
wgame-gfx.workspace = true
wgame-gfx-texture.workspace = true
wgame-shader.workspace = true
wgpu.workspace = true
glam.workspace = true
rgb.workspace = true
half.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
