[package]
name = "wgame-gfx"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
vulkan = ["wgpu/vulkan"]
gles = ["wgpu/gles"]
webgpu = ["wgpu/webgpu"]
webgl = ["wgpu/webgl"]

[dependencies]
wgpu.workspace = true
anyhow.workspace = true
log.workspace = true
glam.workspace = true
rgb.workspace = true
half.workspace = true
hashbrown.workspace = true
