[package]
name = "wgame-image"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std", "png"]
std = []
image = ["std"]
png = ["dep:image", "image/png"]

[dependencies]
bytemuck.workspace = true
euclid.workspace = true
rgb.workspace = true
half.workspace = true
anyhow.workspace = true
guillotiere = "0.6.2"
image = { workspace = true, optional = true }
