[package]
name = "wgame-image"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["png"]
png = ["image/png"]

[dependencies]
bytemuck.workspace = true
euclid.workspace = true
rgb.workspace = true
half.workspace = true
hashbrown.workspace = true
smallvec.workspace = true
anyhow.workspace = true
guillotiere = "0.6.2"
image = { workspace = true, optional = true }
