[package]
name = "wgame-img"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["png"]
png = ["image/png"]

[dependencies]
wgame-gfx.workspace = true
wgpu.workspace = true
image.workspace = true
bytemuck.workspace = true
half.workspace = true
anyhow.workspace = true
