[package]
name = "wgame-img"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["png"]
png = ["image/png"]

[dependencies]
image.workspace = true
bytemuck.workspace = true
euclid.workspace = true
rgb.workspace = true
half.workspace = true
anyhow.workspace = true
