[package]
name = "wgame-shader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgame-shader-macros.workspace = true
wgpu.workspace = true
anyhow.workspace = true
log.workspace = true
bytemuck.workspace = true
glam.workspace = true
rgb.workspace = true
half.workspace = true
smallvec = { workspace = true, features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
minijinja = { version = "2.12.0", features = ["loader"] }
