[package]
name = "wgame-shader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgame-shader-macros.workspace = true
wgpu.workspace = true
anyhow.workspace = true
log.workspace = true
bytemuck.workspace = true
glam.workspace = true
rgb.workspace = true
half.workspace = true
smallvec.workspace = true
serde.workspace = true
minijinja = { version = "2.14.0", features = ["loader"] }
