[package]
name = "wgame-shapes"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgame-gfx.workspace = true
wgpu.workspace = true
anyhow.workspace = true
log.workspace = true
bytemuck.workspace = true
glam.workspace = true
rgb.workspace = true
half.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
minijinja = { version = "2.11.0", features = ["loader"] }
