[package]
name = "wgame-text"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgame-gfx.workspace = true
wgpu.workspace = true
rgb.workspace = true
hashbrown.workspace = true
anyhow.workspace = true
swash = { version = "0.2.5", default-features = false, features = [
    "libm",
    "render",
    "scale",
] }
guillotiere = "0.6.2"
