[package]
name = "wgame-typography"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgame-image.workspace = true
euclid.workspace = true
anyhow.workspace = true
swash = { version = "0.2.6", default-features = false, features = [
    "libm",
    "render",
    "scale",
] }
etagere = "0.2.15"

[dev-dependencies]
image = { workspace = true, features = ["png"] }
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
