[package]
name = "wgame"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["desktop", "shapes", "fs", "img", "utils"]
desktop = [
    "wgame-app/x11",
    "wgame-app/wayland",
    "wgame-gfx/vulkan",
    "wgame-gfx/gles",
    "wgame-fs?/std",
    "wgame-utils?/std",
]
web = [
    "wgame-app/web",
    "wgame-gfx/webgl",
    # "wgame-gfx/webgpu",
    "wgame-fs?/web",
    "wgame-utils?/web",
]
shapes = ["dep:wgame-shapes"]
fs = ["dep:wgame-fs"]
img = ["dep:wgame-img"]
utils = ["dep:wgame-utils"]

[dependencies]
wgame-app.workspace = true
wgame-gfx.workspace = true
wgame-shapes = { workspace = true, optional = true }
wgame-fs = { workspace = true, optional = true }
wgame-img = { workspace = true, optional = true }
wgame-utils = { workspace = true, optional = true }
wgame-macros.workspace = true
anyhow.workspace = true

[dev-dependencies]
futures = { workspace = true, default-features = true }
winit = { workspace = true, default-features = true }
wgpu = { workspace = true, default-features = true }
bytemuck.workspace = true
glam.workspace = true
rgb.workspace = true
