[package]
name = "wgame"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["desktop", "shapes", "fs", "image", "font", "utils"]
desktop = [
    "wgame-app/x11",
    "wgame-app/wayland",
    "wgame-gfx/vulkan",
    "wgame-gfx/gles",
    "wgame-fs?/std",
    "wgame-utils?/std",
]
web = [
    "wgame-app/web",
    "wgame-gfx/webgl",
    # "wgame-gfx/webgpu",
    "wgame-fs?/web",
    "wgame-utils?/web",
]
shapes = ["dep:wgame-gfx-shapes"]
fs = ["dep:wgame-fs"]
image = ["dep:wgame-image"]
font = ["dep:wgame-gfx-font"]
utils = ["dep:wgame-utils"]

[dependencies]
wgame-app.workspace = true
wgame-gfx.workspace = true
wgame-gfx-texture.workspace = true
wgame-gfx-shapes = { workspace = true, optional = true }
wgame-gfx-font = { workspace = true, optional = true }
wgame-fs = { workspace = true, optional = true }
wgame-image = { workspace = true, optional = true }
wgame-shader.workspace = true
wgame-utils = { workspace = true, optional = true }
wgame-macros.workspace = true
anyhow.workspace = true
log.workspace = true

[dev-dependencies]
winit = { workspace = true, default-features = true }
wgpu = { workspace = true, default-features = true }
bytemuck.workspace = true
glam.workspace = true
